# hostspec

./: LICENSE  README.md  pyproject.toml
src/hostspec/: base.py  defaults.py  ops.py  platform.py
tests/: test_assign_cpus.py  test_base.py  test_vm_template.py
