[tool.poetry]
name = "hostspec"
version = "0.1.0"
description = ""
authors = ["Robert Hamrick <rph@muxux.org>"]
readme = "README.md"
packages = [{include = "hostspec", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
